  - Currently requires libgcrypt to be built from source as the provided
    version is out-f-date.

encrypt - 2017.09                                         15th Sept 2017
-----------------

### New For Latest Release

* All
  - Improved key derivation
  - Added MAC as well as previously used hash of data to ensure
    authentication
* FreeBSD
  - Provide ports files and binary package

### Fixed/Changed For Latest Release

* Unix
  - Fix SIGSEGV if the source file is deleted (even while doing nothing)
    (GTK file selection dialog - GNU/Linux; Likely an upsteam problem as
    it appears to have been fixed)
* Windows
  - Build using MSYS2 to provide 64 bit binary
* Android
  - Fix permission handling
  - Attempt to fix NullPointerException after exit (think we've got it;
    it is rather intermittent)


encrypt - 2015.10                                           4th Oct 2015
-----------------

### New For Latest Release

* Automatic error correction of encrypted container format

### Fixed For Latest Release

* UNIX
  - Infinite loop on decryption attempt of unrecognised version
* Android
  - Fix compatibility menu bug
  - Change Android tray icon to black & white
* Windows
  - Workaround for the AES/Rijndael issue; instead of using the DLL from
    http://lrn.no-ip.info we now use the DLL included as part of the
    Gpg4win project


encrypt - 2015.01                                           4th Jan 2015
-----------------

### New For This Release

* No header information
  - If you don’t keep the header, you MUST remember which algorithms and
    mode you used to encrypt the data!
  - This feature is so that if you choose to encrypt your data and then
    hide it in an image (steganography) if you’re coerced to extract it
    will still looks like random pixel data
  - Will keep going even if decryption cannot be verified (until an out
    of memory error - or similar - occurs!)
* Random IV’s (not derived from key)